--- a/src/style/partials/global.scss
+++ b/src/style/partials/global.scss
@@ -7,7 +7,7 @@ body {
   font-size: 18px;
   line-height: 27px;
   font-family: "Arial", sans-serif;
-  color: #f7f4f1;
+  color: #000000;
   font-style: normal;
 
   // background-color: $bg-darkgrey;
