--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,35 +1,17 @@
-<header class="page-header">
-  <a class="page-header__logo">
-    <img class="pade-header__logo-imade" src="img/logo_mobile_226x30.svg" width="226" height="30" alt="Барбершоп Бородинский">
-  </a>
-  <nav class="nav-mock"></nav>
-  <!-- page-header__logo -->
-  <nav class="main-nav">
-    <button class="main-nav__toggle" type="button">Открыть меню</button>
-    <div class="main-nav__wrapper">
-      <ul class="main-nav_list site-list">
-        <li class="site-list__item  site-list__item--active">
-          <a>Главная</a>
-        </li>
-        <li class="site-list__item">
-          <a href="#">Наши работы</a>
-        </li>
-        <li class="site-list__item">
-          <a href="#">Записаться</a>
-        </li>
-        <li class="site-list__item">
-          <a href="#">Контакты</a>
-        </li>
-        <li class="site-list__item">
-          <a href="#">HTML Academy</a>
-        </li>
-      </ul>
-      <ul class="main-nav_list user-list">
-        <li class="user-list__item">
-          <a href="#" class="user-list__login">Войти</a>
-        </li>
-      </ul>
-    </div>
+<header class="main-header">
+  <nav class="main-navigation">
+    <a  class="main-header-logo"><img src="img" width="368"
+      height="153" alt="Логотип Барбершопа Бородинский"></a>
+    <ul class="site-navigation">
+      <li><a href="#">Информация</a></li>
+      <li><a href="#">Новости</a></li>
+      <li><a href="#">Прайс-лист</a></li>
+      <li><a href="#">Магазин</a></li>
+      <li><a href="#">Контакты</a></li>
+
+    </ul>
+    <ul class="user-navigation">
+      <li class="login-link">Вход</li>
+    </ul>
   </nav>
-  <!-- main-nav -->
 </header>
