--- a/src/style/mixin/_font-face.scss
+++ b/src/style/mixin/_font-face.scss
@@ -1,8 +1,8 @@
 @mixin font($name, $weight, $style ) {
   @font-face {
     font-family:'#{$name}';
-    src: url('fonts/#{$name}.woff2') format('woff2'),
-         url('fonts/#{$name}.woff') format('woff');
+    src: url('fonts/#{$name}.woff2') format('woff2');
+    src: url('fonts/#{$name}.woff') format('woff');
     font-weight: $weight;
     font-style: $style;
   }
