--- a/src/style/partials/global.scss
+++ b/src/style/partials/global.scss
@@ -1,18 +1,53 @@
 body {
-  min-width: 320px;
-  min-height: 750px;
   margin: 0;
   padding: 0;
 
-  font-size: 18px;
-  line-height: 27px;
-  font-family: "Arial", sans-serif;
-  color: #000000;
-  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  color: #ffffff;
+  text-transform: uppercase;
 
-  // background-color: $bg-darkgrey;
+  background-color: $bg-darkgrey;
+  background-image: url("../img/bg.jpg");
+  background-repeat: no-repeat;
+  background-position: top center;
 }
-img {
-  min-width: 100%;
-  height: auto;
+.index-columns {
+  color: #000000;
+
+  background-color: #f8f5f2;
+  background-image: url("../img/pattern.jpg");
+  background-repeat: repeat;
+  background-position: 0 0;
+  h2 {
+    font-size: 30px;
+    line-height: 42px;
+  }
+}
+// img {
+//   min-width: 100%;
+//   height: auto;
+// }
+.visually-hidden {
+  @include hidden();
+}
+a {
+  text-decoration: none;
+}
+.button {
+  font: inherit;
+  vertical-align: middle;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+
+  background-color: #000000;
+  border: none;
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: #663d15;
+  }
 }
