--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -1,47 +1,20 @@
-body{
-  background-size: 720px auto;
-  min-height: 750px;
-}
-@media(min-width: $tablet-width){
-  body{
-    background-size: 1178px auto;
-  }
-}
-@media(min-width: $desktop-width){
-  body{
-    background-size: 1391px auto;
-  }
-}
-.nav-mock{
-  min-height: 310px;
-  border: 2px solid #19c953;
+.main-navigation {
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
 
+  background-color: #000000;
 }
-@media(min-width: $tablet-width){
-  .nav-mock{
-    min-height: 70px;
+.site-navigation,
+.user-navigation {
+  list-style: none;
+  a {
+    color: #ffffff;
+    &:hover,
+    &:focus {
+      background-color: #242424;
+    }
   }
-}
-// временно для сетки
+} 
 
-.page-header{
-  display: flex;
-  flex-direction: column;
-  border: 2px solid #000000;
-}
- .page-header__logo{
-   height: 85px;
-   border: 2px solid #f10f0f;
 
- }
-@media(min-width: $tablet-width){
-  .page-header__logo{
-    order: 2;
-    height: 400px;
-  }
-}
-@media(min-width: $desktop-width){
-  .page-header__logo{
-    height: 648px;
-  }
-}
