--- a/src/template/gallery.html
+++ b/src/template/gallery.html
@@ -2,9 +2,9 @@
   <h2>Фотогалерея</h2>
   <figure class="gallery-content">
     <a href="#">
-      <img src="img" width="286" height="164" alt="Интерьер">
+      <img src="img/interier.jpg" width="286" height="164" alt="Интерьер">
     </a>
-    <span class="button gallery-button gallery-button-back">Назад</span>
-    <span class="button gallery-button gallery-button-next">Вперед</span>
+    <button class="button gallery-button gallery-button-back">Назад</button>
+    <button class="button gallery-button gallery-button-next">Вперед</button>
   </figure>
 </section>
