--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,6 +1,6 @@
 <header class="main-header">
   <nav class="main-navigation">
-    <a  class="main-header-logo"><img src="img" width="368"
+    <a  class="main-header-logo"><img src="img/index-logo.svg" width="368"
       height="153" alt="Логотип Барбершопа Бородинский"></a>
     <ul class="site-navigation">
       <li><a href="#">Информация</a></li>
@@ -11,7 +11,9 @@
 
     </ul>
     <ul class="user-navigation">
-      <li class="login-link">Вход</li>
+      <li class="login-link">
+        <a href="#" class="login-link">Вход</a>
+      </li>
     </ul>
   </nav>
 </header>
