закончил верстать сетку

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,5 @@
 /*
-* Custom variables and fonts
+* Custom variables ,fonts and mixin
 */
 @import "partials/variables";
 @import  "partials/font";
@@ -21,6 +21,7 @@
 @import "partials/appointment";
 @import "partials/footer-new";
 @import "partials/modal";
+@import "partials/grid";
 
 
 
