--- a/src/template/header.html
+++ b/src/template/header.html
@@ -2,6 +2,8 @@
   <nav class="main-navigation">
     <a  class="main-header-logo"><img src="img/index-logo.svg" width="368"
       height="153" alt="Логотип Барбершопа Бородинский"></a>
+      <div class="main-navigation-wrapper">
+        <div class="container">
     <ul class="site-navigation">
       <li><a href="#">Информация</a></li>
       <li><a href="#">Новости</a></li>
@@ -15,5 +17,7 @@
         <a href="#" class="login-link">Вход</a>
       </li>
     </ul>
+  </div>
+  </div>
   </nav>
 </header>
