--- a/src/template/footer-new.html
+++ b/src/template/footer-new.html
@@ -1,4 +1,5 @@
 <footer class="main-footer">
+  <div class="container">
   <p class="footer-contact">Барбершоп Бородинский
     <br> г.Санкт-Петербург , ул. Большая конюшенная 19/8
     <br>
@@ -20,4 +21,5 @@
     <b>Разработано</b>
     <a href="#" class="button">Html Academy</a>
   </p>
+</div>
 </footer>
