--- a/src/style/partials/grid.scss
+++ b/src/style/partials/grid.scss
@@ -57,7 +57,7 @@ body {
 .feature-list{
   margin: 0;
   padding: 0;
-  list-style-type: none;
+  list-style: none;
   display: flex;
   justify-content: space-between;
 }
