--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,12 +8,13 @@
 /*
 * Third Party
 */
-@import "../../../node_modules/normalize.css/normalize.css";
+@import "../../node_modules/normalize.css/normalize.css";
 
 /*
 * Custom style
 */
 @import "partials/global";
+@import "partials/grid";
 @import "partials/header";
 @import "partials/features";
 @import "partials/news";
@@ -21,7 +22,6 @@
 @import "partials/appointment";
 @import "partials/footer-new";
 @import "partials/modal";
-@import "partials/grid";
 
 
 
