--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -15,6 +15,20 @@
       background-color: #242424;
     }
   }
-} 
+}
+.user-navigation .login-link{
+  position: relative;
+  padding-left: 50px;
+  background-color: rgba(234,255,45,0.2);
+  box-shadow: inset 0 0 0 2px rgb(234,255,45);
+}
+.login-link::before{
+  content: "";
+  width: 16px;
+  height: 18px;
+  background-color: #ff0000;
+
+}
+
 
 
